Add Rolling Notes

--- a/index.html
+++ b/index.html
@@ -251,6 +251,11 @@
   </div>
 </section>
 
+<div style="text-align:center; margin-top:40px;">
+  <button class="btn" onclick="window.location.href='notes.html'">View Rolling Notes</button>
+</div>
+
+
 <div class="progress-wrapper">
   <div class="progress-bar">
     <div class="progress-bar-fill"></div>
