--- a/index.html
+++ b/index.html
@@ -26,15 +26,11 @@
       scroll-behavior: smooth;
     }
 
+    /* tightened header */
     header {
-      min-height: 50vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: #ffffff;
+      padding: 35px 20px 10px;
       text-align: center;
-      padding: 60px 20px 30px;
+      background: #ffffff;
     }
 
     header h1 {
@@ -42,24 +38,28 @@
       font-weight: 700;
       letter-spacing: -0.02em;
       color: #000;
+      margin-bottom: 6px;
     }
 
     header p.tagline {
       color: var(--muted);
       font-size: 1.05rem;
-      margin-top: 10px;
+      margin-top: 2px;
+      margin-bottom: 8px;
       max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     header p.legal-note {
-      margin-top: 8px;
+      margin-top: 4px;
       font-size: 0.7rem;
       color: #999;
     }
 
     .progress-wrapper {
       max-width: 850px;
-      margin: 40px auto 100px;
+      margin: 30px auto 80px;
       padding: 0 20px;
     }
 
@@ -101,7 +101,7 @@
 
     section {
       max-width: 950px;
-      margin: 80px auto;
+      margin: 70px auto;
       padding: 0 24px;
       opacity: 0;
       transform: translateY(30px);
@@ -229,32 +229,24 @@
   <p>Early concepts demonstrations: ignition detection and CV recognition.</p>
 
   <div class="video-grid">
-    <!-- First Drive video -->
     <div class="video-box">
       <iframe 
         src="https://drive.google.com/file/d/1PJSxJ5yNiIyf0MlfR8eHKq8ZkgczPElG/preview"
         allow="autoplay"
-        allowfullscreen
-        style="width:100%; height:100%; border:0; border-radius:16px;">
-      </iframe>
+        allowfullscreen></iframe>
     </div>
-
-    <!-- Second Drive video -->
     <div class="video-box">
       <iframe 
         src="https://drive.google.com/file/d/10KQw_NTu-8KlJsr_gWH58jyrX92u0AU6/preview"
         allow="autoplay"
-        allowfullscreen
-        style="width:100%; height:100%; border:0; border-radius:16px;">
-      </iframe>
+        allowfullscreen></iframe>
     </div>
   </div>
 </section>
 
-<div style="text-align:center; margin-top:40px;">
+<div style="text-align:center; margin-top:20px;">
   <button class="btn" onclick="window.location.href='notes.html'">View Rolling Notes</button>
 </div>
-
 
 <div class="progress-wrapper">
   <div class="progress-bar">
@@ -324,9 +316,7 @@
   const sections = document.querySelectorAll('section');
   const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
-      if (entry.isIntersecting) {
-        entry.target.classList.add('visible');
-      }
+      if (entry.isIntersecting) entry.target.classList.add('visible');
     });
   }, { threshold: 0.2 });
 
