--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
 
 <div style="text-align:center; margin-top:20px;">
   <button class="btn" onclick="window.location.href='notes.html'">View Rolling Notes</button>
+  <button class="btn" style="margin-left:10px;" onclick="window.location.href='figures.html'">View Figures</button>
 </div>
+
 
 <div class="progress-wrapper">
   <div class="progress-bar">
