--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 <section id="demo-video">
   <h2>Demo Videos</h2>
-  <p>Early concepts demonstrations: ignition detection and CV recognition.</p>
+  <p>Early concepts demonstrations: Safe flame classification & flame detection via (temporary) thermal grid.</p>
 
   <div class="video-grid">
     <div class="video-box">
