--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
       scroll-behavior: smooth;
     }
 
-    /* tightened header */
     header {
       padding: 35px 20px 10px;
       text-align: center;
@@ -220,13 +219,13 @@
 
 <header>
   <h1>Ember</h1>
-  <p class="tagline">An intelligent, dual-sensor fire detection system built for modern safety.</p>
+  <p class="tagline">A smarter, faster way to detect fire before it spreads.</p>
   <p class="legal-note">“Ember” is a working name used descriptively; no trademark claim is asserted.</p>
 </header>
 
 <section id="demo-video">
   <h2>Demo Videos</h2>
-  <p>Early concepts demonstrations: Safe flame classification & flame detection via (temporary) thermal grid.</p>
+  <p>Early concepts demonstrations: Safe flame classification & flame detection via thermal grid.</p>
 
   <div class="video-grid">
     <div class="video-box">
@@ -249,7 +248,6 @@
   <button class="btn" style="margin-left:10px;" onclick="window.location.href='figures.html'">View Figures</button>
 </div>
 
-
 <div class="progress-wrapper">
   <div class="progress-bar">
     <div class="progress-bar-fill"></div>
@@ -266,32 +264,32 @@
 <main>
   <section>
     <h2>Problem</h2>
-    <p>Traditional smoke detectors react only after smoke appears, creating dangerous delays. Ember aims to detect ignition before smoke, minimizing response time and risk.</p>
+    <p>Most smoke alarms only respond once smoke fills the air, often too late. Ember detects ignition right away, giving people more time to act and stay safe.</p>
   </section>
 
   <section>
     <h2>Solution</h2>
-    <p>By merging solar-blind UV sensing with computer vision, Ember identifies flame signatures instantly—even in bright environments—offering a new standard of fire awareness.</p>
+    <p>Ember uses paired sensors and onboard processing to recognize flames instantly, even in bright or changing light. It can tell the difference between a real fire and safe light sources like candles or stovetops.</p>
   </section>
 
   <section>
     <h2>Technology</h2>
-    <p>Ember’s dual-sensor architecture fuses ultraviolet wake logic with onboard AI. It distinguishes dangerous ignition events from safe, supervised flames such as candles or stoves.</p>
+    <p>Ember utilizes wake-interrupt logic to continuously monitor ultraviolet activity, activating only when distinct flame signatures appear, ensuring quick response with minimal power use. When a potential ignition is detected, it “wakes” to analyze and confirm before triggering an alert — saving energy while staying responsive.</p>
   </section>
 
   <section>
     <h2>Value Proposition</h2>
-    <p>Ember enables earlier detection, fewer false alarms, and superior reliability—all while consuming minimal power for extended operation.</p>
+    <p>Ember enables earlier detection, saving lives and property with superior reliability.</p>
   </section>
 
   <section>
     <h2>Market</h2>
-    <p>With over 340,000 home fires annually in the U.S., the global fire detection market is growing beyond $80 billion. Ember’s intelligent detection brings a modern solution to a century-old problem.</p>
+    <p>Home fires affect hundreds of thousands of families every year. Ember brings a modern, practical approach to a problem that hasn’t evolved much in decades.</p>
   </section>
 
   <section>
     <h2>Team</h2>
-    <p>Gabriel Turner | Founder & Lead Engineer<br>Purdue University — B.S. Artificial Intelligence.</p>
+    <p>Gabriel Turner — Founder<br>Studying Artificial Intelligence at Purdue University.</p>
   </section>
 
   <section class="cta">
