--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
   <section>
     <h2>Market</h2>
-    <p>Home fires affect hundreds of thousands of families every year. Ember brings a modern, practical approach to a problem that hasn’t evolved much in decades.</p>
+    <p>Home fires affect hundreds of thousands of families every year. Ember brings a modern, practical approach to a problem that hasn’t evolved in decades.</p>
   </section>
 
   <section>
