--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       --radius: 16px;
       --shadow: 0 12px 40px rgba(0, 0, 0, 0.06);
     }
-
     * { box-sizing: border-box; margin: 0; padding: 0; }
-
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Helvetica Neue', Arial, sans-serif;
       background: var(--bg);
@@ -25,198 +23,72 @@
       overflow-x: hidden;
       scroll-behavior: smooth;
     }
+    header { padding: 35px 20px 10px; text-align: center; background: #ffffff; }
+    header h1 { font-size: clamp(2.3rem, 5vw, 3.2rem); font-weight: 700; letter-spacing: -0.02em; color: #000; margin-bottom: 6px; }
+    header p.tagline { color: var(--muted); font-size: 1.05rem; margin-top: 2px; margin-bottom: 8px; max-width: 600px; margin-left: auto; margin-right: auto; }
+    header p.legal-note { margin-top: 4px; font-size: 0.7rem; color: #999; }
 
-    header {
-      padding: 35px 20px 10px;
-      text-align: center;
-      background: #ffffff;
-    }
+    section { max-width: 950px; margin: 70px auto; padding: 0 24px; }
 
-    header h1 {
-      font-size: clamp(2.3rem, 5vw, 3.2rem);
-      font-weight: 700;
-      letter-spacing: -0.02em;
-      color: #000;
-      margin-bottom: 6px;
-    }
-
-    header p.tagline {
-      color: var(--muted);
-      font-size: 1.05rem;
-      margin-top: 2px;
-      margin-bottom: 8px;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    header p.legal-note {
-      margin-top: 4px;
-      font-size: 0.7rem;
-      color: #999;
-    }
-
-    .progress-wrapper {
-      max-width: 850px;
-      margin: 30px auto 80px;
-      padding: 0 20px;
-    }
-
-    .progress-bar {
-      position: relative;
-      height: 12px;
-      background: var(--blue-light);
-      border-radius: 8px;
-      overflow: hidden;
-    }
-
-    .progress-bar-fill {
-      height: 100%;
-      width: 25%;
-      background: var(--blue);
-      border-radius: 8px;
-      transition: width 0.5s ease;
-      margin-left: 0;
-    }
-
-    .progress-stages {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 16px;
-      font-size: 0.9rem;
-      color: #444;
-    }
-
-    .progress-stages span {
-      position: relative;
-      flex: 1;
-      text-align: center;
-    }
-
-    .progress-stages span.active {
-      color: var(--blue);
-      font-weight: 600;
-    }
-
-    section {
-      max-width: 950px;
-      margin: 70px auto;
-      padding: 0 24px;
-      opacity: 0;
-      transform: translateY(30px);
-      transition: opacity 0.8s ease, transform 0.8s ease;
-    }
-
-    section.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    h2 {
-      font-size: 1.8rem;
-      font-weight: 600;
-      margin-bottom: 12px;
-      color: #000;
-    }
-
-    p {
-      font-size: 1.05rem;
-      color: #222;
-      margin-bottom: 18px;
-      line-height: 1.8;
-    }
+    h2 { font-size: 1.8rem; font-weight: 600; margin-bottom: 12px; color: #000; }
+    p { font-size: 1.05rem; color: #222; margin-bottom: 18px; line-height: 1.8; }
 
     .video-grid {
-      display: flex;
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
       gap: 20px;
       justify-content: center;
     }
 
-    .video-box {
-      flex: 1 1 45%;
+    .media-box {
       aspect-ratio: 16 / 9;
       position: relative;
       overflow: hidden;
       border-radius: 16px;
       box-shadow: 0 8px 28px rgba(0,0,0,0.12);
       background: #000;
+      display: flex;
+      flex-direction: column;
     }
 
-    .video-box iframe {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+    iframe, img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
       border: 0;
     }
 
-    @media (max-width: 768px) {
-      .video-box { flex: 1 1 100%; }
-    }
-
-    .cta {
-      background: #f8f9fa;
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 50px 28px;
+    .caption {
       text-align: center;
-      margin-bottom: 100px;
+      color: #222;
+      font-size: 0.95rem;
+      padding: 6px 0 0;
     }
 
-    form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    input[type="email"], textarea {
+    .carousel {
+      position: relative;
       width: 100%;
-      max-width: 400px;
-      padding: 12px 16px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-      outline: none;
+      height: 100%;
+    }
+    .carousel img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0;
+      transition: opacity 1s ease;
+    }
+    .carousel img.active {
+      opacity: 1;
     }
 
-    textarea {
-      min-height: 100px;
-      resize: vertical;
-    }
-
-    .btn {
-      background: #000;
-      color: #fff;
-      border: none;
-      border-radius: 999px;
-      padding: 14px 38px;
-      font-size: 1.05rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.3s ease;
-      margin-top: 10px;
-    }
-
-    .btn:hover {
-      transform: translateY(-3px);
-      background: #333;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
-    }
-
-    footer {
-      text-align: center;
-      padding: 50px 20px;
-      background: #f8f8f8;
-      color: #777;
-      border-top: 1px solid #eee;
-      font-size: 0.9rem;
+    @media (max-width: 768px) {
+      .video-grid { grid-template-columns: 1fr; }
     }
   </style>
 </head>
-<body>
 
+<body>
 <header>
   <h1>Ember</h1>
   <p class="tagline">A smarter, faster way to detect fire before it spreads.</p>
@@ -224,103 +96,49 @@
 </header>
 
 <section id="demo-video">
-  <h2>Demo Videos</h2>
-  <p>Early concepts demonstrations: Safe flame classification & flame detection via thermal grid.</p>
+  <h2>Demo Media</h2>
+  <p>Visual examples of flame detection, classification, and prototype testing in progress.</p>
 
   <div class="video-grid">
-    <div class="video-box">
-      <iframe 
-        src="https://drive.google.com/file/d/1PJSxJ5yNiIyf0MlfR8eHKq8ZkgczPElG/preview"
-        allow="autoplay"
-        allowfullscreen></iframe>
+    <!-- New Drive Video (Top Left) -->
+    <div class="media-box">
+      <iframe src="https://drive.google.com/file/d/1Zh_6enGdujeA5vIs5necY5Fufe6411DX/preview" allow="autoplay" allowfullscreen></iframe>
+      <div class="caption">Latest Training Detection Demo</div>
     </div>
-    <div class="video-box">
-      <iframe 
-        src="https://drive.google.com/file/d/10KQw_NTu-8KlJsr_gWH58jyrX92u0AU6/preview"
-        allow="autoplay"
-        allowfullscreen></iframe>
+
+    <!-- Rotating Image Carousel (Top Right) -->
+    <div class="media-box">
+      <div class="carousel">
+        <img src="image1.png" class="active" alt="Flame Dataset 1">
+        <img src="image2.png" alt="Flame Dataset 2">
+        <img src="image3.png" alt="Flame Dataset 3">
+        <img src="image4.png" alt="Flame Dataset 4">
+      </div>
+      <div class="caption">Training Dataset Samples</div>
+    </div>
+
+    <!-- Old Videos Below -->
+    <div class="media-box">
+      <iframe src="https://drive.google.com/file/d/1PJSxJ5yNiIyf0MlfR8eHKq8ZkgczPElG/preview" allow="autoplay" allowfullscreen></iframe>
+      <div class="caption">Safe Flame Classification</div>
+    </div>
+
+    <div class="media-box">
+      <iframe src="https://drive.google.com/file/d/10KQw_NTu-8KlJsr_gWH58jyrX92u0AU6/preview" allow="autoplay" allowfullscreen></iframe>
+      <div class="caption">Thermal Grid Detection</div>
     </div>
   </div>
 </section>
 
-<div style="text-align:center; margin-top:20px;">
-  <button class="btn" onclick="window.location.href='notes.html'">View Rolling Notes</button>
-  <button class="btn" style="margin-left:10px;" onclick="window.location.href='figures.html'">View Figures</button>
-</div>
-
-<div class="progress-wrapper">
-  <div class="progress-bar">
-    <div class="progress-bar-fill"></div>
-  </div>
-  <div class="progress-stages">
-    <span>Proof of Concept</span>
-    <span class="active">Parts Ordered</span>
-    <span>Prototype v1</span>
-    <span>Prototype vₓ</span>
-    <span>Testing & Refinement → Product v1</span>
-  </div>
-</div>
-
-<main>
-  <section>
-    <h2>Problem</h2>
-    <p>Most smoke alarms only respond once smoke fills the air, often too late. Ember detects ignition right away, giving people more time to act and stay safe.</p>
-  </section>
-
-  <section>
-    <h2>Solution</h2>
-    <p>Ember uses paired sensors and onboard processing to recognize flames instantly, even in bright or changing light. It can tell the difference between a real fire and safe light sources like candles or stovetops.</p>
-  </section>
-
-  <section>
-    <h2>Technology</h2>
-    <p>Ember utilizes wake-interrupt logic to continuously monitor ultraviolet activity, activating only when distinct flame signatures appear, ensuring quick response with minimal power use. When a potential ignition is detected, it “wakes” to analyze and confirm before triggering an alert — saving energy while staying responsive.</p>
-  </section>
-
-  <section>
-    <h2>Value Proposition</h2>
-    <p>Ember enables earlier detection, saving lives and property with superior reliability.</p>
-  </section>
-
-  <section>
-    <h2>Market</h2>
-    <p>Home fires affect hundreds of thousands of families every year. Ember brings a modern, practical approach to a problem that hasn’t evolved in decades.</p>
-  </section>
-
-  <section>
-    <h2>Team</h2>
-    <p>Gabriel Turner — Founder<br>Studying Artificial Intelligence at Purdue University.</p>
-  </section>
-
-  <section class="cta">
-    <h2>Join Mailing List</h2>
-    <form action="https://formspree.io/f/xanlynro" method="POST">
-      <input type="email" name="email" placeholder="Your email" required />
-      <button type="submit" class="btn">Join</button>
-    </form>
-
-    <h2>Contact</h2>
-    <form action="https://formspree.io/f/xzzkbzlj" method="POST">
-      <input type="email" name="email" placeholder="Your email" required />
-      <textarea name="message" placeholder="Your message" required></textarea>
-      <button type="submit" class="btn">Send</button>
-    </form>
-  </section>
-</main>
-
-<footer>
-  <p>© 2025 Cedaris Technologies LLC — “Ember” is a descriptive working name; no trademark claim is asserted.</p>
-</footer>
-
 <script>
-  const sections = document.querySelectorAll('section');
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if (entry.isIntersecting) entry.target.classList.add('visible');
-    });
-  }, { threshold: 0.2 });
-
-  sections.forEach(section => observer.observe(section));
+  // Simple image carousel rotation
+  const imgs = document.querySelectorAll('.carousel img');
+  let idx = 0;
+  setInterval(() => {
+    imgs[idx].classList.remove('active');
+    idx = (idx + 1) % imgs.length;
+    imgs[idx].classList.add('active');
+  }, 2500);
 </script>
 </body>
 </html>
