--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 
 <section id="demo-video">
   <h2>Demo Media</h2>
-  <p>Visual examples of flame detection, classification, and prototype testing in progress.</p>
+  <p>Model Training Clips</p>
 
   <div class="video-grid">
     <!-- New Drive Video (Top Left) -->
     <div class="media-box">
       <iframe src="https://drive.google.com/file/d/1Zh_6enGdujeA5vIs5necY5Fufe6411DX/preview" allow="autoplay" allowfullscreen></iframe>
-      <div class="caption">Latest Training Detection Demo</div>
+      <div class="caption">Safe Flame Classification V2</div>
     </div>
 
     <!-- Rotating Image Carousel (Top Right) -->
@@ -120,7 +120,7 @@
     <!-- Old Videos Below -->
     <div class="media-box">
       <iframe src="https://drive.google.com/file/d/1PJSxJ5yNiIyf0MlfR8eHKq8ZkgczPElG/preview" allow="autoplay" allowfullscreen></iframe>
-      <div class="caption">Safe Flame Classification</div>
+      <div class="caption">Safe Flame Classification V1</div>
     </div>
 
     <div class="media-box">
