--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
         <img src="image2.png" alt="Flame Dataset 2">
         <img src="image3.png" alt="Flame Dataset 3">
         <img src="image4.png" alt="Flame Dataset 4">
+        <img src="image5.png" alt="Flame Dataset 4">
+        <img src="image6.png" alt="Flame Dataset 4">
+
       </div>
       <div class="caption">Training Proccess</div>
     </div>
